<resources>
    <string name="app_name">MyReposSearch</string>
</resources>
