...
  rules = {},
  placeholder,
  required,
  isValid,
  ...rest
}: InputProps<T>) => {
  if (required) rules.required = 'This field is required';

  return (
    <Controller
      control={control}
      name={name}
      rules={rules}
...
