...
                source={require('./assets/closed-pure-icon.png')}
                style={isOpenState && styles.inactiveState}
              />
              <Text
                style={[styles.stateName, isOpenState && styles.inactiveState]}
              >
                Closed
              </Text>
            </TouchableOpacity>
          </View>
          <FlatList
            data={issuesData?.pages.flat()}
            keyExtractor={(item) => item.id}
...
